--- a/backends/stdout/examples/CMakeLists.txt
+++ b/backends/stdout/examples/CMakeLists.txt
@@ -1,3 +1,6 @@
-add_executable(parserDemo main.c dump.c)
+
+set(CMAKE_CXX_STANDARD 17)
+
+add_executable(parserDemo main.cpp dump.cpp)
 target_link_libraries(parserDemo PRIVATE NodesetLoader)
 target_link_libraries(parserDemo PRIVATE open62541::open62541)
